--- a/Read/Management/01.管理转变/04.特色的管理之路.md
+++ b/Read/Management/01.管理转变/04.特色的管理之路.md
@@ -2,9 +2,9 @@
 - 01.做管理到底为何
 - 02.输出自己的价值
 - 03.天时地利和人和
-- 04.提升管理的能力
-
-
+- 04.管理模式有哪些
+- 05.管理模式的指南
+- 06.管理的五大内容
 
 
 ### 01.做管理到底为何
@@ -41,25 +41,13 @@
 
 
 
-
-
-### 01.管理者工作任务
-- 在具体开展工作的时候，往往并不是管理者一个人规划好各项工作内容，然后交给团队去执行就可以了。原因有三点：
-- 第一，每个人的精力都是有限的。如果你什么事情都自己一肩挑，时间和精力上会顾不过来。
-- 第二，没有人是全知全能的。就算你精力旺盛，也会遇到不擅长的事情。比如我就对吃喝玩乐不怎么在行，所以组织团队建设活动的能力就比较差。
-- 第三，团队成员的认可度和积极性也很重要。就算你什么都能规划好，但具体工作还是要交给团队成员来执行，如果你的想法不能得到充分理解和积极响应，大家暗地里抵制其实也很容易。
-
-
-
-### 02.管理模式有哪些
+### 04.管理模式有哪些
 - 第一种是独裁式。管理者直接指定下属或团队的具体工作，包括做什么事、怎么做、什么时候做和输出什么结果等，全都一一明确，团队成员不能提出不同意见和方案。用一句话总结就是：“我来决定，你来执行。”
 - 第二种是民主式。管理者组织团队成员针对某项工作进行讨论，然后和团队成员一起选出最终的方案。管理者的意见并不是优先级最高的，团队通常采用集体投票的方式来做决策。用一句话总结就是：“我们讨论，我们决定。”
 - 第三种是专家式。管理者作为某方面的专家，组织团队成员针对某项工作进行讨论，并由团队成员来做决策，选出最终的方案；管理者不参与决策，只是在讨论的过程中提供专业指导。用一句话总结就是：“我们讨论，你们决定。”
 - 第四种是教练式。管理者作为某方面的专家，组织团队成员针对某项工作进行讨论，然后自己做决策，选出最终的方案；团队成员不参与决策。有点类似于 NBA 球队安排战术的时候，球员可以参与讨论，但是最终拍板的是教练。用一句话总结就是：“我们讨论，我来决定。”
 - 第五种是授权式。管理者把某项工作全权授权给指定人员，由被授权者来做决策，管理者在任务执行过程中的关键节点进行监督，防止出现较大偏差。用一句话总结就是：“你来决定，我来监督”。
 - 第六种是放羊式。管理者把某项工作交给指定人员，然后就不管了，等到最终结果出来的时候可能会去了解一下。用一句话总结就是：“你去做，我不管。”
-
-
 
 
 ### 05.管理模式的指南
