--- a/Read/Management/01.管理转变/05.管理容易踩的坑.md
+++ b/Read/Management/01.管理转变/05.管理容易踩的坑.md
@@ -10,20 +10,22 @@
 
 
 ### 01.前言简单的介绍
-- 管理更多的是一门实践科学，从“知道”到“做到”，还需要长期地刻意练习。在实际操练过程中，你会碰到各种各样的问题，这会是常态。但是，如果你能提前知道前面有哪些“坑”是最容易踩到的，你也许就可以提前规避，选择跨过去或绕过去。
+- 管理更多的是一门实践科学，从“知道”到“做到”，还需要长期地刻意练习。在实际操练过程中，你会碰到各种各样的问题，这会是常态。
+- 如果你能提前知道前面有哪些“坑”是最容易踩到的，你也许就可以提前规避，选择跨过去或绕过去。
+
 
 
 ### 02.误区一被动执行
 - 常见的做法和说法如下：不主动找活儿干，总是等待上级派活儿，如果上级没有明确安排，就“放羊”。即使上级有了安排，还总是指望上级替他做决定该怎么做，选哪个方案。在和上、下级沟通中，他主要充当“传话筒”的角色，常用句式是“老板说……”“某员工说……”，并没有反思每次沟通要达到的目的和效果是什么。过于关注苦劳和付出，常见说法是“某某还是不错的，没有功劳也有苦劳。”
 - 类似的行为和说法还有很多。你能够看出以上四个问题的共同点在哪里吗？你觉得这些问题背后的原因是什么？会带来哪些可能的后果呢？
-- 由于没有从“管理者”的视角出发，所以至少会带来如下三个后果：团队方向感缺失。大家都只是着眼于手头工作，团队得不到愿景的凝聚和激励。团队做不出有效的业绩。因为团队没有方向感，所以结果就很难有效。无法带领一个团队。由于视角局限，所以还不具备带领团队的能力。
+- 由于没有从“管理者”的视角出发，所以至少会带来如下三个后果：团队方向感缺失。大家都只是着眼于手头工作，团队得不到愿景的凝聚和激励；团队做不出有效的业绩。因为团队没有方向感，所以结果就很难有效；无法带领一个团队。由于视角局限，所以还不具备带领团队的能力。
 
 
 
 ### 03.误区二大包大揽
 - 常见的相关说法有：“某某做得太慢了，还是我来做吧，他半天的工作，我两个小时就搞定了。”“团队离了我就不转了，里里外外都靠我操心，他们都担不起这个责任。”“某某的工作主要靠我……”“在我的指导下，某某才……”“这件事主要是我做的……”
-- 关于上述的这三个问题，我分别用三个词来概况：问题1，叫“包工作”。也就是说，他作为一个管理者，把团队成员力所能及的工作都做了。问题2，叫“包责任”。也就是说，他作为团队的负责人，把团队成员每个人应该自己承担的责任，都包在他一个人身上了。问题3，叫“包功劳”。为了体现自己的能干，处处凸显自己的功劳，把团队成员的业绩和工作成果也都放在自己头上了。由于这类问题突出一个“包”字，所以把它归纳为：大包大揽、唯我最强。
-- 你身边一定有这样的管理者，甚至你还曾经遇到过，而且对于其中某些大包大揽的行为，你可能还挺钦佩他的能力和担当。那么，你是否意识到，大包大揽的管理者也可能会带来这样的后果：梯队问题：大树底下寸草不生，梯队迟迟培养不起来。因为梯队的培养需要授权，需要让高潜人才有发挥空间并承担相应的责任。激励问题：由于管理者冲得太靠前，团队成员积极性受挫，遇事往后缩。个人发展问题：由于得不到团队成员的有效支持，自己又忙又累，做不了更大的业务。
+- 关于上述的问题，分别用三个词来概况：问题1，叫“包工作”。也就是说，他作为一个管理者，把团队成员力所能及的工作都做了。问题2，叫“包责任”。也就是说，作为团队的负责人，把团队成员每个人应该自己承担的责任，都包在他一个人身上了。问题3，叫“包功劳”。为了体现自己的能干，处处凸显自己的功劳，把团队成员的业绩和工作成果也都放在自己头上了。由于这类问题突出一个“包”字，所以把它归纳为：大包大揽、唯我最强。
+- 你身边一定有这样的管理者，而且对于其中某些大包大揽的行为，你可能还挺钦佩他的能力和担当。那么，你是否意识到，大包大揽的管理者也可能会带来这样的后果：梯队问题：大树底下寸草不生，梯队迟迟培养不起来。因为梯队的培养需要授权，需要让高潜人才有发挥空间并承担相应的责任。激励问题：由于管理者冲得太靠前，团队成员积极性受挫，遇事往后缩。个人发展问题：由于得不到团队成员的有效支持，自己又忙又累，做不了更大的业务。
 
 
 
@@ -31,7 +33,7 @@
 - 常见的相关说法有：“好好干，我不会亏待你的，我绝不会让跟着我的兄弟们吃亏！”“某某可能会不高兴，可能会离职，怎么办呢？”“某某技术比我强，我给他打好下手就行了。”上面这三个问题，其实是两类管理者的表现，我合并在一起了。
 - 第一类是“带头大哥”式的管理者，讲究的是兄弟感情，在他们心目中，不但兄弟的工作是我的， 兄弟人也是我的。这类管理者可能在某些情况下特别有战斗力，但是一旦情况有变，对公司的破坏性也是非常大的，因为他忘记了他带的团队是公司的资源，而不是自己的，所以不可能成为一个职业的管理者。
 - 而后两类问题描述的是和第一类几乎相反的一类管理者，由于团队里有资深的高级工程师，他在技术判断力方面不如这些高工，索性就给这些高工做起了“保姆”，而忘记了自己才是这个团队的舵手和船长，因此也不是一个职业的管理者。
-- 我把这两类不职业的情况放在一起，归纳为：带头大哥、当家保姆。这类问题带来的后果大体如下：不职业的管理风格和文化，这会给公司带来很大的潜在风险。团队没有方向，所以很难有正确的判断和决策。
+- 把这两类不职业的情况放在一起，归纳为：带头大哥、当家保姆。这类问题带来的后果大体如下：不职业的管理风格和文化，这会给公司带来很大的潜在风险。团队没有方向，所以很难有正确的判断和决策。
 
 
 ### 05.误区四固化思维
