--- a/Read/Management/02.管理落地/01.多任务并行去做.md
+++ b/Read/Management/02.管理落地/01.多任务并行去做.md
@@ -12,7 +12,7 @@
 
 
 ### 01.做事的几个阶段
-- “做事”这个话题依然很大，我们要如何探讨呢？既然做事是一个过程，那么我们就分成“事前”“事中”和“事后”三段来探讨。
+- 做事这个话题依然很大，要如何探讨呢？既然做事是一个过程，那么我们就分成“事前”“事中”和“事后”三段来探讨。
 - 在做事之前，我们需要回答的问题是：要做哪些事？先做哪件，后做哪件？也就是分清楚轻重缓急，也叫优先级梳理。
 - 在做事过程中，我们要确保事情的进展按照计划推进，尽在掌握之中，也就是有效地推进执行。
 - 在做事之后，我们要复盘做事的整个过程，并从过去的经验之中抽取一些流程机制，以便以后在类似的场景下也可以做得更好、更顺畅。
@@ -20,16 +20,14 @@
 
 
 ### 02.轻重缓急的梳理
-- “多任务并行该如何应对”，是其中最突出的一个。为什么大家会头疼这个问题呢？因为大家面临的问题常常是人手不够，时间不多，但是要完成的工作却还在一件一件挤进来，这可怎么办呢？
+- 多任务并行该如何应对？是其中最突出的一个？为什么大家会头疼这个问题呢？因为大家面临的问题常常是人手不够，时间不多，但是要完成的工作却还在一件一件挤进来，这可怎么办呢？
 - 对于每个团队来说，当下能做的工作是有限的，增加并发并不会让大家的产出更高效，所以，多任务并行问题归根结底还是优先级问题，即，你要优先保证哪项工作的顺利进行。
 - 排项目优先级对于管理者来说是必备技能了，每月、每周甚至每天都在训练，相信你也对于“重要紧急四象限”耳熟能详了。
-- ![image](https://static001.geekbang.org/resource/image/60/a9/60986386cc4cb09e2af292315d205da9.png)
-
 
 
 
 ### 03.什么是要事误区
-- 误区一：要事就是紧急的事。时间管理的四象限法我们都知道：把事情按紧急程度和重要程度划分，然后优先处理既重要又紧急的事。这个工具看起来很妙，但可操作性不强。因为它没有解决一个根本问题：怎么判断一件事很重要？很多人觉得，如果一件事不立马做就会出问题，就说明它很重要，比如修理漏水的卫生间。其实恰恰相反，这只说明它紧急，并不能说明它重要。事实上，特别紧急的事往往不是要事。
+- 误区一：要事就是紧急的事。时间管理的四象限法都知道：把事情按紧急程度和重要程度划分，然后优先处理既重要又紧急的事。这个工具看起来很妙，但可操作性不强。因为它没有解决一个根本问题：怎么判断一件事很重要？很多人觉得，如果一件事不立马做就会出问题，就说明它很重要，比如修理漏水的卫生间。其实恰恰相反，这只说明它紧急，并不能说明它重要。事实上，特别紧急的事往往不是要事。
 - 误区二：要事就是那些非做不可的事。这是很多人都会犯的一个错误。但事实上，真正的要事，不一定是非做不可的事。比如，办一个餐饮企业，没有卫生许可证肯定不行。你必须得办，否则不能开张。但从长期经营整个餐饮店来看，这并不是一个要事，因为它没有放大效应，不会对整个店铺的经营产生持续的影响。必须要做的事如果不做，别的许多事情只是“做不了”；但如果要事不做，别的许多事情会“做不好”。上面员工培训的例子，也说明了这个道理。
 - 误区三：既然是要事，就要作用巨大，而且最好能快速产生作用。这种想法是不对的，真正的要事往往不起直接作用。比如今天培训员工，可能要后天，甚至半年后作用才凸显出来。这是时间上的不直接。空间上也是一样——研发部门改进了产品设计，业绩最终可能在销售部门体现出来。但这些不直接起作用的，往往才是真正的要事。
 
