--- a/Read/ReadMeWiki/00.方案实践/05.ANR监控治理实践.md
+++ b/Read/ReadMeWiki/00.方案实践/05.ANR监控治理实践.md
@@ -24,7 +24,7 @@
 - 05.ANR监控设计思路
     - 5.1 ANR监控整体思路
     - 5.2 目前流行方案
-    - 5.3 
+    - 5.3 ANR捕获设计
     - 5.5 整体架构图
     - 5.6 UML设计图
     - 5.7 关键流程图
@@ -60,18 +60,14 @@
 ### 02.ANR基础分析
 #### 2.1 究竟什么是ANR
 - ANR的简单理解
-    - ANR Activity not responding(页面没有响应) 
-    - ANR Application not responding 应用没有响应
-- ANR(Application Not responding)，是指应用程序未响应。
+    - ANR Activity not responding(页面没有响应) ；ANR Application not responding 应用没有响应
     - Android系统对于一些事件需要在一定的时间范围内完成，如果超过预定时间能未能得到有效响应或者响应时间过长，都会造成ANR。
-
 
 
 #### 2.2 造成ANR的原因分类
 - 造成ANR的原因一般有两种：
     - 当前的事件没有机会得到处理（即主线程正在处理前一个事件，没有及时的完成或者looper被某种原因阻塞住了）
     - 当前的事件正在处理，但没有及时完成
-
 
 
 #### 2.3 ANR产生条件
@@ -86,9 +82,7 @@
     - 主线程，被阻塞5秒钟以上，就会抛出ANR对话框。不同的组件发生ANR的时间不一样，Activity是5秒，BroadCastReceiver是10秒，Service是20秒（均为前台）。
     - 点击事件(按键和触摸事件)5s内没被处理: Input event dispatching timed out
 - 那些操作会引发ANR
-    - Activity，Fragment中暴力相应点击事件有可能会导致ANR
-    - 断点调试时，程序可能会出现ANR无限应
-    - 主线程做了耗时操作，比如查询数据库数据导致ANR
+    - 1.Activity，Fragment中暴力相应点击事件有可能会导致ANR；2.断点调试时，程序可能会出现ANR无限应；3.主线程做了耗时操作，比如查询数据库数据导致ANR
 
 
 #### 2.5 四大组件ANR
