--- a/Read/ReadMeWiki/00.方案实践/05.ANR监控治理实践.md
+++ b/Read/ReadMeWiki/00.方案实践/05.ANR监控治理实践.md
@@ -43,6 +43,7 @@
 
 ### 01.ANR整体概述
 #### 1.1 项目背景介绍
+- ANR-WatchDog 单独起一个子线程向主线程发送一个重置变量操作的Runnable，然后休眠一段时间（自定义的ANR超时时间），如果休眠后该变量的值没有被重置，则表明有ANR发生。
 
 
 #### 1.2 遇到问题
