--- a/AppLeet/src/main/res/values/strings.xml
+++ b/AppLeet/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">LeetCode</string>
+    <string name="app_name">AppLeet</string>
 </resources>
