--- a/Read/ReadShareWiki/02.计划管理/03.计划的落地策略.md
+++ b/Read/ReadShareWiki/02.计划管理/03.计划的落地策略.md
@@ -8,6 +8,7 @@
 - 07.小目标层层递进
 - 08.小目标分成todo
 - 09.坚持15分钟法则
+- 10.如何处理碎片化
 
 
 
@@ -68,4 +69,10 @@
 - 以前在书上看到的，跟大家分享一个秘诀，简单好用，就是「15分钟法则」。这期间，不要碰手机，提前把信息处理好。马上坐到书桌前，告诉自己，做一件有意义的事（提前做好计划）：回顾笔记、看经典书也好、罗列todo，按照自己的志趣，安排你业余时间的1个15分钟。**记住，这期间，不要碰手机**。你会发现一个神奇的现象：一旦你的身体启动学习机制，你会发现坚持下去，并没有那么难。
 - 开启节奏然后坚持，习惯了这种节奏以后，慢慢地你会爱上这种疲惫又充实的感觉。不用半个月，会轻松读完一本优质的书籍，听完一门有益的课程，逐步学会一门有趣的技能。这种久违的撕裂成长感，会比沉迷于浅层的消遣，要爽太多了。
 
+
+
+### 10.如何处理碎片化
+- 平时的时候，会在各种渠道接收一些碎片文章，各种群、朋友圈、朋友的推荐等等，这些碎片文章大部分是一些比较片面的，线性的文章，我一般都是先粗看一遍，如果发现有什么亮点，就会收藏起来，否则支持pass。
+- 然后，再我的某个碎片时间，把这些平时粗筛的文章拿出来看，这次再看有哪些可以被我吸收的知识，然后给它打上tag，最后在遇到一些问题的时候，就可以从这些tag中，寻找答案，所以，一般一篇好的文章，我会读三遍以上，而获得这些碎片文章，则是我碎片时间的主要目的。
+- 碎片文章其实是有很大隐患的，因为长期只从片面的角度看这些文章的东西，会让你的思维变得混乱、焦虑，所以你需要一段时间就进行一次磁盘碎片整理，将这些碎片文章，添加到你自己的知识体系树上，只有让这些碎片成为你的知识体系的一个根节点，这些碎片文章才是有意义的，否则，这些碎片时间就完全被浪费掉了。这就是为什么，看了各个大佬的干货，却依然成不了大佬？
 
