--- a/Read/ReadShareWiki/07.底层思维/13.深度思考的实践.md
+++ b/Read/ReadShareWiki/07.底层思维/13.深度思考的实践.md
@@ -1,54 +1,23 @@
 #### 目录介绍
-- 01.先来看一个案例
-- 02.案例的一些感想
-- 03.深度思考的前提
-- 04.深度思考的前提
-- 05.如何处理碎片化
-- 10.深度思考方法论
+- 01.深度思考的背景
+- 03.正确搞清楚事情
 
 
 
-
-### 01.先看一个案例
-
-
-
-- 有个朋友是个理想型的，有想法有激情爱折腾，他说想放弃现有工作去找一份天使投资的工作。
-- 虽没从事过类似工作，但凭借着内心力量的驱动他花费了半个月时间研究一个行业，写了一份行业投资分析报告，随后投了份简历，这哥们如愿以偿的收获了面试邀请，看他给我描述时的神态还是有点小激动的，依此说明那份投资分析报告获得了一定的认可。
-- 但面试时HR总监问了几个问题把他问蒙圈了。
-- HR总监：“对你影响最深的一本书是什么，什么书名，作者是谁？”
-- 他回答说了书中的几个观点，然后又说作者确实想不起来了。
-- HR总监：“平时看科幻电影吗？”
-- 他回答：平时工作比较忙，很少看电影。—多么冠冕堂皇的回答啊。
-- HR总监又问：“你对什么痴迷？痴迷到什么程度？”
-- 他回答：除了工作、看些书确实没对什么事物痴迷过。
-- 面完试他就决得这些问题回答的很糟糕，心里有些隐忧。
-- 在返程的路上，他收到了HR总监的回复，说“通过和同事的综合测评，你的经历不合适这份工作。”
-- 他有点不甘心，问HR总监“为什么面试没通过呢？”
-- HR总监回答：“知识的深度和广度不够，缺乏远见。”
-- 这一句话刺醒了他，多么痛的领悟啊。深度，广度，远见不仅刺醒了他也深深刺醒了我，他是如此，自己又何尝不是呢。再仔细分析那几个问题，其实针对性很强的。问什么书对你影响最深，意在考察你对这本书理解深度，做天使投资理解深度深度思考是基本素质。问看不看科幻电影意在考察对未来的关注程度。
-- 拿这个标准来衡量自己，发现对很多问题思考程度都很肤浅，想到一、两层之后就很难再深入下去了。平时也喜欢看书，也买了不少书，但基本等于白看，仅仅记住几个观点没深刻理解书中的体系结构，知识不成体系是没多大价值的。**看了没真正消化，不试图深入思考、理解、消化变成自己的东西，本质上跟没看是一样的**。
+### 01.深度思考的背景
+- 现在获取信息的方式越来越多样化，也越来越快捷简短，比如抖音快手，看似看了好多东西，但基本上意义不大，反而还给你一个假象，让你以为学了许多东西。
+- 为什么说看短视频意义不大没有任何营养呢！只有观点，论断，没有任何的前因后果，没有场景和论证过程，每个道理都有其实用的范围，场景，阶段等等，只知道一句话，没什么用处。
+- 越是不费力越轻松得到的信息，越没有价值，花了功夫和辛劳甚至是亲自调查得到的信息才是最有价值的。
 
 
 
+### 03.正确搞清楚事情
+- 那么怎么才能正确的搞清楚一件事，把握其本质呢！
+- 1、先树立一个准则：凡事不费力获得的信息和知识都是值得怀疑的。
+- 2、有可信赖有实战能力的人提供的知识和信息是比较可信的。
+- 3、最好是获得第一手资料，就是自己亲自调查研究实践！比如你想选址开店，不用听房东告诉你人流怎么样，你要自己蹲点数路过的人，然后分类，还要分析对手，等等，这次是第一手资料。
+- 4、反复实践，看有没有效果，实践是检验真理的唯一标准，实践后，看结果，结果每一次都很好，说明判断是正确，但判断正确了就不代表万事大吉了，万事万物都是在变化，根据结果的波动也要不断去调整策略。
 
-### 03.深度思考的前提
-#### 3.1 内心意愿
-- 再好的事自己不想做也无济于事，内心想有这个意愿才能开启思考之门。
-
-
-#### 3.2 思考是自己的事
-- 上学的时候有这个感觉，觉得学习是给别人学习的。在学校老师逼着学，到家家长逼着学，写完作业了吗？不写完作业不准睡觉，考试不好回到家还得挨揍。
-- 长大后才明白学习是自己的，人和人的差距也是在毕业之后发生的。那些把读书当成自己事的人，毕业后更懂得自学的人通常混的都不会太差。深度思考始终是自己的事，虽一开始很难深入，时间久了有了自己的方法论也就不难了。
-
-
-#### 3.3 一个自己喜欢的领域
-- 前两天看了一部电影《星际穿越》，没有那种强烈的使命感和对亲人的爱，库珀是回不到地球的，同样也谈不上拯救人类了。你选择的领域直接影响你日后成就的大小。
-
-
-#### 3.4 决心。
-- 光想是远远不够的，没有决心就会给自己找各种借口，我没时间，工作都累个半死还有心思想这个，今天不下定决心深入思考、研究明天迟早是要还的。
-- 更重要的是想成事一定要早，时间不等人啊。不要自欺欺人，不深刻思考也能成就人生，成为人生赢家，真的是白日梦啊。上帝只做了两件事，一是创造环境，二是建立竞争，羚羊时时刻刻想着怎么跑过狮子，必须有这种决心，否则只会成为狮子的盘中餐。
 
 
 
@@ -71,12 +40,6 @@
 - 就比如：自己看了Android方面的书籍，首先是把它运用在工作中，然后可以思考关于界面，服务，线程，消息机制等等底层的原理，进而改进重构代码，最后总结知识点，写博客输出。其实这也是一种思考。
 
 
-
-
-### 05.如何处理碎片化
-- 平时的时候，会在各种渠道接收一些碎片文章，各种群、朋友圈、朋友的推荐等等，这些碎片文章大部分是一些比较片面的，线性的文章，我一般都是先粗看一遍，如果发现有什么亮点，就会收藏起来，否则支持pass。
-- 然后，再我的某个碎片时间，把这些平时粗筛的文章拿出来看，这次再看有哪些可以被我吸收的知识，然后给它打上tag，最后在遇到一些问题的时候，就可以从这些tag中，寻找答案，所以，一般一篇好的文章，我会读三遍以上，而获得这些碎片文章，则是我碎片时间的主要目的。
-- 碎片文章其实是有很大隐患的，因为长期只从片面的角度看这些文章的东西，会让你的思维变得混乱、焦虑，所以你需要一段时间就进行一次磁盘碎片整理，将这些碎片文章，添加到你自己的知识体系树上，只有让这些碎片成为你的知识体系的一个根节点，这些碎片文章才是有意义的，否则，这些碎片时间就完全被浪费掉了。这就是为什么，看了各个大佬的干货，却依然成不了大佬？
 
 
 ### 10.深度思考方法论
