--- a/Read/ReadMeWiki/07.数据结构/01.数组的基础介绍.md
+++ b/Read/ReadMeWiki/07.数据结构/01.数组的基础介绍.md
@@ -12,8 +12,6 @@
 
 
 
-
-
 ### 01.什么是数组
 - 数组是一种线性表数据结构。
     - 它用一组连续的内存空间，来存储一组具有相同类型的数据。
@@ -76,7 +74,7 @@
     ```
     a[i]_address = base_address + i * data_type_size
     ```
-    - 其中 data_type_size 表示数组中每个元素的大小。我们举的这个例子里，数组中存储的是+int+类型数据，所以 data_type_size 就为 4 个字节。这个公式非常简单，我就不多做解释了。
+    - 其中 data_type_size 表示数组中每个元素的大小。我们举的这个例子里，数组中存储的是+int+类型数据，所以 data_type_size 就为 4 个字节。这个公式非常简单，就不多做解释了。
 
 
 ### 06.数组和链表区别
@@ -130,11 +128,6 @@
     - 所以我觉得最主要的原因可能是历史原因。 C 语言设计者用 0 开始计数数组下标，之后的 Java、JavaScript 等高级语言都效仿了 C 语言，或者说，为了在一定程度上减少 C 语言程序员学习 Java 的学习成本，因此继续沿用了从 0 开始计数的习惯。甚至还有一些语言支持负数下标，比如 Python。
 
 
-
-
-
-### 其他内容
-- 本文是学习极客时间上王争大神的算法课程，详细内容可以去极客时间上查找，数据结构和算法之美。
 
 
 
