--- a/Read/ReadMeWiki/01.大型方案/32.屏幕适配优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/32.屏幕适配优化实践.md
@@ -4,6 +4,8 @@
     - 1.2 基础概念
     - 1.3 设计目标
     - 1.4 收益分析
+- 02.屏幕适配基础
+    - 2.1 回顾基础概念
 - 03.技术方案选型
     - 3.1 适配方案说明
     - 3.2 适配方案对比
@@ -36,6 +38,20 @@
 
 
 #### 1.4 收益分析
+
+
+### 02.屏幕适配基础
+#### 2.1 回顾基础概念
+- 来回顾一下px、dp、dpi、ppi、density等概念：
+    - px：像素点，px = density * dp。
+    - ppi：像素密度，每英寸所包含的像素数目，屏幕物理参数，不可调整，dpi没有人为调整时 = ppi。
+    - dpi：像素密度，在系统软件上指定的单位尺寸的像素数量，可人为调整，dpi没有人为调整时 = ppi。
+    - dp：density-independent pixels，即密度无关像素，基于屏幕物理分辨率的一个抽象的单位，以dp为尺寸单位的控件，在不同分辨率和尺寸的手机上代表了不同的真实像素，比如在分辨率较低的手机中，可能1dp = 1px,而在分辨率较高的手机中，可能1dp=2px，这样的话，一个64*64dp的控件，在不同的手机中就能表现出差不多的大小了，px = dp * （dpi / 160）。
+    - denstiy：密度，屏幕上每平方英寸所包含的像素点个数，density = dpi / 160。
+- 其他一些常见概念
+    - 物理尺寸：手机对角线的物理尺寸。单位：英寸（inch），1英寸=2.54cm。Android手机常见的尺寸有5寸、5.5寸、6寸等等
+
+
 
 
 ### 03.技术方案选型
@@ -107,50 +123,11 @@
 
 
 
-### 2.相关重要的概念
-#### 2.1 屏幕尺寸[**物理尺寸**]
-- 含义：手机对角线的物理尺寸
-- 单位：英寸（inch），1英寸=2.54cm
-- Android手机常见的尺寸有5寸、5.5寸、6寸等等
 
 
 
-#### 2.2 屏幕分辨率[**px**]
-- 含义：手机在横向、纵向上的像素点数总和
-- 一般描述成屏幕的"宽x高”=AxB
-- 含义：屏幕在横向方向（宽度）上有A个像素点，在纵向方向 （高）有B个像素点
-- 例子：1080x1920，即宽度方向上有1080个像素点，在高度方向上有1920个像素点
-- 单位：px（pixel），1px=1像素点
-- Android手机常见的分辨率：720x1280、1080x1920等等
 
-
-
-#### 2.3 屏幕像素密度[**dpi**]
-- 含义：每英寸的像素点数
-- 单位：dpi（dots per ich）
-- 假设设备内每英寸有160个像素，那么该设备的屏幕像素密度=160dpi
-- 屏幕像素密度与屏幕尺寸和屏幕分辨率有关，在单一变化条件下，屏幕尺寸越小、分辨率越高，像素密度越大，反之越小。
-- dpi计算公式：举个例子：屏幕分辨率为：1920*1080，屏幕尺寸为5吋的话，那么dpi为440
-![image](https://upload-images.jianshu.io/upload_images/4432347-aa1bdc7070ff6c6b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- **注意：dpi是根据屏幕真实的分辨率和尺寸来计算的，每个设备都可能不一样的**
-
-
-
-#### 2.4 dp[dip]、dpi、sp、px
-- dp（dip）：px = dp * 密度比，都是Density Independent Pixels的缩写，即密度无关像素
-- dpi：开方（宽度平方 + 高度平方） / 手机的尺寸；dpi是屏幕像素密度，假如一英寸里面有160个像素，这个屏幕的像素密度就是160dpi
-- sp： 可以根据文字大小首选项进行放缩，是设置字体大小的御用单位。
-- px： 像素，px是比较熟悉，前面的分辨率就是用的像素为单位，大多数情况下，比如UI设计、Android原生API都会以px作为统一的计量单位，像素是获取屏幕宽高等。
-- 问题： dp和px如何换算呢？
-```
-px = density * dp;
-density = dpi / 160;
-px = dp * (dpi / 160);
-```
-
-
-
-#### 2.5 mdpi、hdpi、xdpi、xxdpi
+#### 2.5 mdpi、hdpi、xdpi、xxhdpi
 - 2.5.1 作用： mdpi、hdpi、xdpi、xxdpi用来修饰Android中的drawable文件夹及values文件夹，用来区分不同像素密度下的图片和dimen值。
 ```
 名称像                     素密度范围
