--- a/Read/ReadMeWiki/03.其他优化/01.so库加载基础介绍.md
+++ b/Read/ReadMeWiki/03.其他优化/01.so库加载基础介绍.md
@@ -123,7 +123,7 @@
     }
     ```
 - loader分两种情况
-    - 这里根据ClassLoader是否存在分了两种情况，当ClasssLoader存在的时候通过loader的findLibrary()查看目标库所在路径，当ClassLoader不存在的时候通过mLibPaths加载路径。最终都会调用nativeLoad加载动态库。
+    - 这里根据ClassLoader是否存在分了两种情况，当ClassLoader存在的时候通过loader的findLibrary()查看目标库所在路径，当ClassLoader不存在的时候通过mLibPaths加载路径。最终都会调用nativeLoad加载动态库。
 
 
 
