--- a/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
@@ -6,8 +6,12 @@
 - 04.Android消息机制
 - 05.Android多线程问题
 - 07.Android动画机制
+- 08.Android多媒体问题
 - 09.Android网络相关
-
+- 10.Android数据相关问题
+- 11.WebView相关问题
+- 12.Jetpack相关问题
+- 13.控件相关问题汇总
 
 
 ### 01.Android四大组件问题
@@ -96,10 +100,11 @@
 - Handler、Thread和HandlerThread的差别 ？HandlerThread是怎么实现的？
 - ThreadLocal原理，实现及如何保证Local属性？
 - Looper.loop()为什么不会阻塞主线程，IdleHandler（闲时机制）是做什么用的？
+- Handler机制，IdleHandler执行时机。Handler#postDelay(runnable, 20s) 一个消息，然后把手机时间调整为1分钟后，刚才的runnable会不会执行。
 
 
 #### 4.2 ThreadLocal
-
+- ThreadLocal是如何做到线程间的不共享数据的，ThreadLocalMap里面的key和value是什么。
 
 
 ### 05.Android多线程问题
@@ -116,6 +121,8 @@
 
 
 #### 5.3 线程池
+- 线程池的核心参数。如果core为5，提交了三个任务，分别被三个线程执行了，其中一个任务提前执行完毕了，此时再提交一个任务，这个任务是如何执行的？
+
 
 
 ### 07.Android动画机制
@@ -129,33 +136,45 @@
 - 补间动画和属性动画，对于作用于View，两者有什么区别？属性动画是如何改变View的属性的？
 
 
+### 08.Android多媒体问题
+- 如何给控件的背景设置圆角。
+
+
 ### 09.Android网络相关
 #### 9.1 网络请求基础
 - 数据层有统一的管理么，数据缓存是怎么做的，http请求等有提供统一管理么？
 - 网络请求缓存处理，okhttp如何处理网络缓存的？
 - 服务器只提供数据接收接口，在多线程或多进程条件下，如何保证数据的有序到达？ 
+- 网络请求：https请求如何保证安全性？Charles能抓https请求么？能抓的话那安全性在哪？app如何防止代理抓包？
+
 
 
 #### 9.2 网络拦截
 
-#### 9.3 Cookie，token等
 
 
-### 2.2.0 Android基础之kotlin
-#### 2.2.0.1 Kotlin语法
-#### 2.2.0.2 Kotlin其它
-
-
-### 2.2.1 Android基础之其他
-#### 2.2.1.1 数据存储
+### 10.Android数据相关问题
+#### 10.1 数据存储
 - SharePreference性能优化，可以做进程同步吗？SharedPreferences的应用场景，核心原理是什么？SharedPreferences是线程安全的吗？ 
+- SharedPreferences：两种提交方式，缺点，如何解决
 - Android如何在不压缩的情况下加载高清大图？Android里的内存缓存和磁盘缓存是怎么实现的。
+- android里面的两种序列化方式，如何实现的
 
 
-#### 2.2.1.2 WebView相关
+### 11.WebView相关问题
 - WebView优化了解吗，如何提高WebView的加载速度？Java和JS的相互调用怎么实现，有做过什么优化吗？
 - Webview内存泄露出现的原因，该如何解决？怎么样提高webView加载速度？
 - WebView的内核是什么，4.4后直接使用了Chrome，那么Chrome又有哪些好处呢？
+- js调用native方法，它底层的原理是什么？为什么js能调用到Java的方法？webkit提供了这个功能，那它是怎么实现的？js调用native的方法时，是同步的还是异步的?java方法return一个值，js那边能立即拿到么？通过js调用一个java方法，这个java方法都是@onJavaInterface注解过的，这个方法是运行在哪个线程？
+
+
+### 12.Jetpack相关问题
+- LiveData，连续set两个相同的数据，会收到几次；连续post两个相同的数据，会收到几次；liveData能在子线程接收么？
+- ViewModel：如何实现Activity旋转之后，依旧能恢复数据的？
+
+
+
+### 13.控件相关问题汇总
 
 
 
