--- a/Read/ReadMeWiki/09.问题思考/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题思考/04.Android性能优化.md
@@ -1,6 +1,28 @@
 # Android问题汇总
 #### 目录介绍
+- 01.内存相关问题汇总
+- 04.ANR相关问题汇总
+- 05.卡顿相关问题汇总
+- 10.so库崩溃问题汇总
 
+
+
+### 01.内存相关问题汇总
+- 内存泄漏常见的有哪几种？如何检测？LeakCanary原理，Activity、Fragment
+
+
+### 04.ANR相关问题汇总
+- ANR如何解决，trace.txt如何看？
+
+
+
+### 05.卡顿相关问题汇总
+- 卡顿如何解决？
+- UI卡顿的原因有哪些？如何优化？
+
+
+### 10.so库崩溃问题汇总
+- so奔溃如何解决？
 
 
 
