--- a/Read/ReadMeWiki/03.其他优化/01.so库加载基础介绍.md
+++ b/Read/ReadMeWiki/03.其他优化/01.so库加载基础介绍.md
@@ -1,10 +1,10 @@
 #### 目录介绍
 - 01.先来看一个错误
 - 02.对so库的简单理解
+- 03.查看so库的路径
 - 04.System.load源码分析
 - 05.System.loadLibrary源码
 - 06.findLibrary源码阅读
-
 
 
 
@@ -29,6 +29,17 @@
 - so库是干什么的
     - 实现完成之后，打包编译成so文件，那么我们在应用层就可以调用这个native方法，完事，native方法就自动的去找so文件中的方法，有没有实现，找到后去执行它。
     - 所以我们定义的native方法就要和引入的so文件在同一个包名下，不然两者是分立的。
+
+
+### 03.查看so库的路径
+- 在安装完成App后，app中的如果有so库
+    - 那么，so的路径在/data/data/packagename/lib, 或者/data/app/packagename/lib相关目录下。
+    - 在system/data下面的lib目录里
+- Android系统提供了API接口来获取so的路径，用法举例：
+    - String libName = "libAbc.so";        
+    - String libPathName = context.getApplicationInfo().nativeLibraryDir +"/" + libName;
+- 如何查看so库代码
+    - 具体可以看：AppSoLibUtils，大概的意思是读取当前进程pid中map文件，针对文件后缀名是否包含so进程过滤
 
 
 
