--- a/Read/ReadShareWiki/07.底层思维/11.提问能力的提升.md
+++ b/Read/ReadShareWiki/07.底层思维/11.提问能力的提升.md
@@ -1,13 +1,13 @@
 #### 目录介绍
 - 01.先来看两个案例
-- 02.冒名顶替综合征
-- 03.看几个提问案例
+- 02.看几个提问案例
+- 03.提问前要做什么
 - 04.如何问有效问题
 - 05.先尝试自己解决
 - 06.一句话概括问题
 - 07.较为详细的描述
 - 08.不排斥不同观点
-
+- 09.提问高手的特点
 
 
 
@@ -17,18 +17,21 @@
 
 
 
-### 02.冒名顶替综合征
-- 心理学中有个专有名词叫“冒名顶替综合征”，简单来说就是无法将自己的成功归因于自己的能力，并总是担心有朝一日会被别人识破自己就一个普通人。患有冒名顶替综合征的人通常会坚信自己的成功并不是因为自己的努力或能力，而是凭借着运气、良好的时机，或者别人误以为他们能力很强、很聪明，才导致他们的成功。
-- 主观的认为向他人寻求帮助会强化这种感觉，暴露自己是个“弱者”，其实并不是这样。
-
-
-
-### 03.看几个提问案例
+### 02.看几个提问案例
 - 先想一想，如果你是被问的那个人，你希望听到怎样的问题。对某个事物的认识，总是“由浅到深”。虽然同样是由浅到深，但每个人思考的深度却千差万别。
 - 1.我在传智播客培训学习Android的时候，有学生遇到不懂的章节，想请教老师，于是便对老师说，这个我不懂。老师听了很诧异，于是问他究竟哪里不懂，要具体到一个点，这样方便他解决。这个学生最后说，我也不知道我哪里不懂，反正我就是不懂。
 - 2.有人希望前辈在工作上给点建议，于是问前辈，我怎样才能做好工作，由于范围太大，导致最后别人说出大众式的建议，对于自己又没有太大的作用。
 - 3.有人问大牛，运营怎么做？这是一种问法；还有另外一种问法，我们这个投资界App资讯平台目前大概有10万用户，我们想提高用户的活跃度，想做一个激励体系，现在我们考虑了A,B,C等几个方便，不知道您觉得这方面是否有遗漏。
 - 以前我也不会提问，现在想想，感觉那不是提问，而且希望别人直接帮我把问题解决啊……许多问题刚开始不知道好与否，其实，你可以换位思考下，也许就不一样呢！
+
+
+
+### 03.提问前要做什么
+- 在提问之前，你一定要做好如下3点自我检视，只要有任何1点没做，就极有可能引起被提问者的不满。
+- 1、不要提蠢问题。问问题前，建议你先用这个问题问自己一遍，因为草率的发问最终只能得到草率的回答，或者根本得不到任何有效的答案。
+- 2、先搜先查。只要是搜索引擎和官方文档能回答的就别问别人，因为你自己去搜索问题相关的资料要比直接把答案灌输给你会让你学到更多。
+- 3、明确提问目的。你对目的的定义要足够精确，要让别人有足够的着力点来回答。总的来说，要做出一个好的提问，你需要在现有的水平上做好功课，提前去搜索、补充背景知识，拿出现阶段最好的问题，用高能量的词，以及指向清晰的、准确的语句去交换对方的答案，这样才能体现你对被提问者的尊重，同时，也能在被提问者心中留一个更好的印象。
+- 记住这一点：提出高质量问题的过程，其实就是解决问题的过程。因此，在程序员的世界里面，有时候发现、定义问题的能力比解决问题的能力更重要。
 
 
 
@@ -40,18 +43,15 @@
 
 
 
-
 ### 05.先尝试自己解决
 - 遇到问题不要急着问别人，时间允许的情况下，先看看靠自己是否能够解决。这样，一方面能锻炼自己分析问题和解决问题的能力，另一方面，一旦问题解决了，问题就不是问题，而是你的经验和知识库了。
 - 况且现在互联网上有那么多的技术资料和各类问答网站，想碰到一个别人没碰到过的问题，已经非常困难了。在百度上搜索一下，主要要定位问题的点，然后对得到的信息进行分析，过滤和取舍。
 - 如果做了努力依然不能解决，或者客观条件不允许你自己解决了，那么要做的就是选择一个好的提问对象，不管是是现实中的大神，还是网络上的牛人，确保他是你所知道的最佳解决人选。
 
 
-
 ### 06.一句话概括问题
 - 用一句话准确概括你遇到的问题，提炼出问题的核心，如果是邮件沟通的话，你可以把它作为标题，更能吸引你的求助对象打开你的邮件。
 - 然后，要用清晰的语言描述你遇到的问题，注意要先在开头说明你想达到的目标，再去详细描述你问题的具体场景，阻碍你的特定步骤等等。因为很有可能你之前的思路、过程就走了弯路，避免误导其他人。
-
 
 
 ### 07.较为详细的描述
@@ -61,9 +61,12 @@
 
 
 ### 08.不排斥不同观点
-- 对不同的观点，不要排斥。站在不同的角度去思考问题，当然会有不同见解，我们要慢慢学会理解，如果尚未思考就直接排斥，很有可能会走偏。
+- 对不同的观点，不要排斥。站在不同的角度去思考问题，当然会有不同见解，要慢慢学会理解，如果尚未思考就直接排斥，很有可能会走偏。
 
 
+### 09.提问高手的特点
+- 真正的提问高手，都是批判性思维之大成者，在《提问的艺术》一书中提到，一个优秀的批判性思维者必备的4个特征：
+- 1、知识面广泛，能够从多个角度去理解事物；2、任何结论都有强有力的证据和原因；3、善于倾听他人的想法，但会从内心评判该想是否有足够的支撑；4、为了找到原因和证据，会尝试多种思考方式。
 
 
 
