--- a/Read/ReadMeWiki/07.Jetpack/02.Navigation学习.md
+++ b/Read/ReadMeWiki/07.Jetpack/02.Navigation学习.md
@@ -112,7 +112,6 @@
 - 先思考这样一个问题：**如果让我们实现一个Fragment的导航库，首先要实现什么？**
 
 
-
 #### 4.1 Navigation架构分析
 - `NavGraphFragment`是什么：导航界面的容器
     - 主要是承载fragment的一个容易，其实就是一个拓展fragment。
@@ -121,8 +120,8 @@
 - 一些标签的作用
     - `action`标签是什么：声明导航的行为，比如id，通过id可以执行跳转到对应的页面；如果destination，声明行为导航的目的地
     - `argument`标签是什么：跳转参数的设置，name表示参数key，argType表示参数类型，defaultValue表示默认值
-- NavController是什么：跳转导航页面的操作
-    - 通过调用navigate方法，跳转页面，相当于路由
+- `NavController`是什么：跳转导航页面的操作
+    - 通过调用`navigate`方法，跳转页面，相当于路由
 
 
 #### 4.2 Navigation源码UML
@@ -224,7 +223,7 @@
 
 
 ### 05.彻底搞懂Navigation
-- 在这之前，首先需要达到 **熟练使用Navigation**。通过逆向思考，能帮助你我 **更深刻的理解** Navigation的整体，让我们换个角度，不再是 **源码的观众**，而是 **架构的设计者**。
+- 在这之前，首先需要达到**熟练使用Navigation**。通过逆向思考，能帮助你我 **更深刻的理解** Navigation的整体，让我们换个角度，不再是 **源码的观众**，而是 **架构的设计者**。
 
 
 #### 5.1 设计NavHostFragment
