--- a/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
+++ b/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
@@ -109,6 +109,7 @@
 
 
 
+
 ### 02.图片内存计算方式
 #### 2.1 如何计算占用内存
 - 如果图片要显示下Android设备上，ImageView最终是要加载Bitmap对象的，就要考虑单个Bitmap对象的内存占用了，如何计算一张图片的加载到内存的占用呢？其实就是所有像素的内存占用总和：
@@ -445,6 +446,17 @@
 
 
 #### 7.2 切割圆角优化
+- 方案1：直接采用Canvas.clipPath 相关api，裁剪出一个圆角区域。
+    - 该方案简单暴力，通用性强。如果只是一个静态的单图视图，该方法问题不大，但如果是复杂页面，滚动的时候，测试就会跟你说，页面卡顿了，要优化。原因就是 Canvas.clip的相关api损耗相对较大。
+- 方案2：系统提供的CardView设置圆角
+    - 把原来全工程各个视频控件和图片控件的外层，都加上一层CardView。改造成本大，布局层级更深一层，layout时间加长。
+- 方案3：使用setXfermode法
+    - 此种方式就是再new一个相同尺寸的bitmap，然后使用paint.setXfermode(new PorterDuffXfermode(Mode.SRC_IN))；先画圆角矩形，再画原始bitmap，然后就得到了一个圆角的bitmap。早期用得较多，占用bitmap双倍内存。
+- 方案4：图片加载库比如Glide，Fresco等
+    - 在底层，无非也是使用上面的这两种种方式。早期的使用setXfermode来实现，后来使用BitmapShader实现。使用简单，稳定。
+- 方案5：遮罩
+    - 还是使用setXfermode，不过与方法一不同的是：不对图片作任何更改，只在圆角之外再画一层与背景颜色相同的四个角来遮挡，在视觉上造成圆角图片的效果。
+
 
 
 
