--- a/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
+++ b/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
@@ -456,7 +456,8 @@
     - 在底层，无非也是使用上面的这两种种方式。早期的使用setXfermode来实现，后来使用BitmapShader实现。使用简单，稳定。
 - 方案5：遮罩
     - 还是使用setXfermode，不过与方法一不同的是：不对图片作任何更改，只在圆角之外再画一层与背景颜色相同的四个角来遮挡，在视觉上造成圆角图片的效果。
-
+- 那个切割圆角该怎么优化呢？
+    - 
 
 
 
