--- a/Read/ReadMeWiki/06.Framwork/03.WMS机制深入分析.md
+++ b/Read/ReadMeWiki/06.Framwork/03.WMS机制深入分析.md
@@ -5,6 +5,10 @@
     - 1.3 可以解决那些问题
 - 02.WMS核心类说明
 - 03.WMS流程分析
+- 04.Window渲染过程
+    - 4.1 Window创建过程
+    - 4.2 Window显示过程
+
 
 
 ### 01.快速了解WMS机制
@@ -21,21 +25,77 @@
 
 
 #### 1.2 应用于那些场景
+- Activity页面渲染
+    - Activity 启动后就可以看到我们写的 Layout 布局界面，Activity 从 setContentView() 加载布局到Window上，这个过程就涉及到WMS。
+
 
 
 #### 1.3 可以解决那些问题
 - 如果你的定位是做界面开发，那么界面怎么来的？如何显示的？如何布局？如何渲染……要明白这些问题，WMS就是你必须掌握的内容。
+    - Window 是什么？
+    - Activity 与 PhoneWindow 与 DecorView 之间什么关系？
 
 
 
+### 04.Window渲染过程
+#### 4.1 Window创建过程
+- Window创建流程图如下所示
+    - ![image](https://imgconvert.csdnimg.cn/aHR0cDovL2ltZy5ibG9nLmNzZG4ubmV0LzIwMTgwMzAxMTAyMjExNDkz)
+- 大概重要流程介绍
+    >ActivityThread.handleLaunchActivity()
+    >ActivityThread.performLaunchActivity()
+        >mInstrumentation.newActivity 使用反射创建Activity
+        >activity.attach 这里会调用Activity中attach方法
+    >Activity.attach()
+         >mWindow = new PhoneWindow 这里创建所属的PhoneWindow
+         >mWindow.setWindowManager  设置并获取 WindowManagerImpl 对象
+- 一些核心流程
+    - 在 Activity 创建过程中执行 scheduleLaunchActivity() 之后便调用到了 handleLaunchActivity() 方法。
+    - 在 Android 中，Window 是个抽象的概念， Android 中 Window 的具体实现类是 PhoneWindow
+    - 得到一个 WindowManager 对象，WindowManager 是一个抽象类，这个 WindowManager 的具体实现是在 WindowManagerImpl 中，对比 Context 和 ContextImpl。
+- mWindow.setWindowManager流程分析
+    - 每个 Activity 会有一个 WindowManager 对象，这个 mWindowManager 就是和 WindowManagerService 进行通信，也是 WindowManagerService 识别 View 具体属于那个 Activity 的关键，创建时传入 IBinder 类型的 mToken。
+    - 这个 Activity 的 mToken，这个 mToken 是一个 IBinder，WindowManagerService 就是通过这个 IBinder 来管理 Activity 里的 View。
 
 
 
+#### 4.2 Window显示过程
+- Window显示流程图如下所示
+    - ![image](https://imgconvert.csdnimg.cn/aHR0cDovL2ltZy5ibG9nLmNzZG4ubmV0LzIwMTgwMzAxMTAyMjUyOTk1)
+- 大概重要流程介绍
+    >ActivityThread.handleResumeActivity()
+    >ActivityThread.performResumeActivity()     执行到 onResume()
+    >r.activity.makeVisible()   添加视图
+    >Activity.makeVisible()     
+         >wm.addView   将decorView添加到Window窗口上
+         >mDecor.setVisibility(View.VISIBLE)    设置mDecor可见
+- WindowManager的addView流程
+    - WindowManager 的 addView 的具体实现在 WindowManagerImpl 中，而 WindowManagerImpl 的 addView 又会调用 WindowManagerGlobal.addView()。
+- WindowManagerGlobal.addView()
+    ``` java
+    public void addView(View view, ViewGroup.LayoutParams params,Display display, Window parentWindow) {
+        ...
+        ViewRootImpl root = new ViewRootImpl(view.getContext(), display);        
+        view.setLayoutParams(wparams);    
+        mViews.add(view);    
+        mRoots.add(root);    
+        mParams.add(wparams);        
+        root.setView(view, wparams, panelParentView);
+        ...
+    }
+    ```
+    - 这个过程创建一个 ViewRootImpl，并将之前创建的 DecoView 作为参数传入，以后 DecoView 的事件都由 ViewRootImpl 来管理了，比如，DecoView 上添加 View，删除 View。ViewRootImpl 实现了 ViewParent 这个接口，这个接口最常见的一个方法是 requestLayout()。
+    - ViewRootImpl 是个 ViewParent，在 DecoView 添加的 View 时，就会将 View 中的 ViewParent 设为 DecoView 所在的 ViewRootImpl，View 的 ViewParent 相同时，理解为这些 View 在一个 View 链上。所以每当调用 View 的 requestLayout()时，其实是调用到 ViewRootImpl，ViewRootImpl 会控制整个事件的流程。可以看出一个 ViewRootImpl 对添加到 DecoView 的所有 View 进行事件管理。
 
 
 
-
-
+#### 4.3 Activity中Window创建过程
+- Activity中Window创建过程
+    - ![image](https://imgconvert.csdnimg.cn/aHR0cDovL2ltZy5ibG9nLmNzZG4ubmV0LzIwMTgwMzAxMTAyMzE3ODMx)
+- Window 是什么？
+    - Window 是 Android 中窗口的宏观定义，主要是管理 View 的创建，以及与 ViewRootImpl 的交互，将 Activity 与 View 解耦。
+- Activity 与 PhoneWindow 与 DecorView 之间什么关系？
+    - 一个 Activity 对应一个 Window 也就是 PhoneWindow，一个 PhoneWindow 持有一个 DecorView 的实例，DecorView 本身是一个 FrameLayout。
 
 
 
