--- a/Read/ReadMeWiki/08.反思系列/21.View自定义控件反思.md
+++ b/Read/ReadMeWiki/08.反思系列/21.View自定义控件反思.md
@@ -1,6 +1,6 @@
 #### 目录介绍
 - 01.自定义控件步骤
-
+- 04.绘制View操作
 
 
 
@@ -17,6 +17,9 @@
 
 
 
+### 04.绘制View操作
+- Paint 用于在Android上画图的类，相当于画笔
+- Canvas 相当于画布，Android上的view的绘制都与他相关
 
 
 
