--- a/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
@@ -313,7 +313,7 @@
     ``` java
     Process: com.yc.ycandroidtool, PID: 16060
     java.lang.NullPointerException: Attempt to invoke virtual method 'void android.app.Activity.finish()' on a null object reference
-        at com.com.yc.toollib.crash.CrashTestActivity.onClick(CrashTestActivity.java:48)
+        at com.com.yc.appmonitor.CrashTestActivity.onClick(CrashTestActivity.java:48)
         at android.view.View.performClick(View.java:7187)
         at android.view.View.performClickInternal(View.java:7164)
         at android.view.View.access$3500(View.java:813)
