--- a/Read/ReadMeWiki/01.大型方案/07.WebView封装实践.md
+++ b/Read/ReadMeWiki/01.大型方案/07.WebView封装实践.md
@@ -266,23 +266,9 @@
     - 这种方式其实实现也很简单，使用的频次也很高，上面介绍到了 WebViewClient 。其中有个回调接口 shouldOverrideUrlLoading ，就是利用这个拦截 url，然后解析这个 url 的协议。如果发现是我们预先约定好的协议就开始解析参数，执行相应的逻辑。
     ```
     public boolean shouldOverrideUrlLoading(WebView view, String url) {
-        //假定传入进来的 url = "js://openActivity?arg1=111&arg2=222"，代表需要打开本地页面，并且带入相应的参数
-        Uri uri = Uri.parse(url);
-        String scheme = uri.getScheme();
-        //如果 scheme 为 js，代表为预先约定的 js 协议
-        if (scheme.equals("js")) {
-              //如果 authority 为 openActivity，代表 web 需要打开一个本地的页面
-            if (uri.getAuthority().equals("openActivity")) {
-                  //解析 web 页面带过来的相关参数
-                HashMap<String, String> params = new HashMap<>();
-                Set<String> collection = uri.getQueryParameterNames();
-                for (String name : collection) {
-                    params.put(name, uri.getQueryParameter(name));
-                }
-                Intent intent = new Intent(getContext(), MainActivity.class);
-                intent.putExtra("params", params);
-                getContext().startActivity(intent);
-            }
+        //假定传入进来的 url = "ycjs://openActivity?arg1=111&arg2=222"，代表需要打开本地页面，并且带入相应的参数
+        //如果 scheme 为 ycjs，代表为预先约定的 ycjs 协议
+        if (Uri.parse(url).getScheme().equals("ycjs")) {
             //代表应用内部处理完成
             return true;
         }
