--- a/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
@@ -7,9 +7,12 @@
 - 02.隐私合规测什么
     - 2.1 隐私合规是什么
     - 2.2 为何做隐私合规
+    - 2.3 隐私合规政策案例
 - 03.权限合规检测
-    - 3.1 早期的注册权限
-    - 3.2 动态权限授予
+    - 3.0 权限概念介绍
+    - 3.1 权限组概念
+    - 3.2 注册权限授予
+    - 3.3 
 - 04.隐私合规检测
     - 4.1 隐私合规检查什么
     - 4.5 隐私数据注意项
@@ -32,6 +35,7 @@
     - 7.5 异常设计
 - 08.其他说明介绍
     - 8.1 参考链接
+
 
 
 ### 01.整体概述
@@ -63,10 +67,10 @@
 
 ### 02.隐私合规测什么
 #### 2.1 隐私合规是什么
-- 对客户端而言，权限隐私可分为权限和隐私两个大的方面。
-- 权限为用户通过app内弹窗设置或者手机设置内对应app的权限设置方式给予对应app相应的权限
+- 对客户端而言，权限隐私可分为 **权限** 和 **隐私** 两个大的方面。
+- **权限**为用户通过app内弹窗设置或者手机设置内对应app的权限设置方式给予对应app相应的权限
     - 如电话权限，定位权限，相机权限，浮窗权限，读写权限等。
-- 隐私为app使用过程中与用户个人相关的个人信息
+- **隐私**为app使用过程中与用户个人相关的个人信息
     - 如所在位置，Mac地址，设备id等。就Android端而言，多数隐私信息需要对应授权后才能获取，但目前仍存在部分隐私信息无需授权就可以拿到的。
 
 
@@ -76,13 +80,43 @@
 
 
 
+#### 2.3 隐私合规政策案例
+- 隐私合规案例
+    - 比如获取设备信息：获取设备id，androidId等
+    - 比如获取权限信息：获取读写存储卡权限，获取电话权限等。
+    - http://sofire.bdstatic.com/push/privacy.html
+- 需要有文案描述
+    - 收集设备id，为了帮助开发者在进行消息推送时识别最终用户设备，保障开发者及最终用户正常使用消息推送服务，提升消息推送服务的效率以及准确率。
+    - 获取读写权限，帮助开发者进行最终用户设备识别，保障开发者及最终用户正常使用消息推送服务，提升消息推送服务的效率以及准确率；更准确定位并解决产品和服务使用问题，改进及优化产品和服务体验。
+
+
+
 ### 03.权限合规检测
-#### 3.1 早期的注册权限
+#### 3.0 权限概念介绍
+- 权限 Permission：
+    - 权限是Android的一种安全机制，主要用来保护用户、应用的数据安全。Android系统将权限分为三个保护级别：普通、危险和签名权限。
+- 普通权限
+    - 普通权限就是在AndroidManifest.xml中注册即可，不需要动态申请。在应用安装后就会授予，用户无法撤销应用的这些权限。
+- 危险权限
+    - 危险权限也得在AndroidManifest.xml中注册，不过用到的时候需要动态申请：运行时检测有没有该权限，没有就提示用户授权。
+- 签名权限
+    - 在尝试使用某权限的应用签名证书，和定义该权限的应用证书一致时才会授予。一般自定义权限会采用这种签名的机制，防止其它三方应用也申请自定义的权限。
+- adb命令查看权限
+    - 通过adb命令可以查看手机中的所有权限：    adb shell pm list permissions
+    - 授权某个app指定的permission：adb pm grant <package_name> <permission_name>
+
+
+
+#### 3.1 权限组概念
+- 什么是权限组
+    - 一组权限要么一个都没有授权，要么只要授权其中一个全部权限自动获取(以后可能会有变化，埋个坑)。
+    - 比如：STORAGE权限组(WRITE_EXTERNAL_STORAGE，READ_EXTERNAL_STORAGE)
+
+
+
+#### 3.2 注册权限授予
 - Android6.0(SDK版本为23)之前的版本
-    - 安装App页面会列出当前app所注册的所有权限，无同意与否按钮，只有安装和取消，开发App时只需要在清单文件中注册所需的对应权限即可
-
-
-#### 3.2 动态权限授予
+    - 安装App页面会列出当前app所注册的所有权限，无同意与否按钮，只有安装和取消，开发App时只需要在清单文件中注册所需的对应权限即可。
 - Android自6.0(SDK版本为23)开始，将权限分为普通权限，危险权限，特殊权限。
     - 而其中的危险权限需要在调用某些系统方法之前需要用户手动授予对应权限，包括PHONE,LOCATION,STORAGE等多个权限组。如果在没授权的情况下直接调用相关方法，就会抛出，应用也随之崩溃。
     ``` java
@@ -96,10 +130,27 @@
     //请求某个权限，调用后会弹出权限系统弹窗
     ActivityCompat.requestPermissions((Activity) object, perms, requestCode);
     ```
+- 权限申请回调
+    - 用户响应系统权限对话框后，系统就会调用应用的onRequestPermissionsResult()方法。系统会传入用户对权限对话框的响应以及开发者自定义的请求代码
+    ```
+    @Override
+    public void onRequestPermissionsResult(int requestCode, @NonNull String[] permissions, @NonNull int[] grantResults) {
+        super.onRequestPermissionsResult(requestCode, permissions, grantResults);
+    }
+    ```
 - 注：如果用户拒绝权限且不让再次显示系统权限授权弹窗的话，最好是提供端内可点击进入手机系统的权限设置页面以让用户可以选择开启对应权限。
 
 
+
+#### 3.3 自定义权限
+
+
+
 ### 04.隐私合规检测
+#### 4.1 隐私合规检查什么
+
+
+
 #### 4.5 隐私数据注意项
 - 遇到的问题，每次排查隐私数据很麻烦
     - 因为随着项目更迭，随时可能有新的隐私安全问题被引入进来，而如果每次发版前都要重新走一遍上述流程来排查是否存在问题的话，也是很麻烦。
@@ -169,6 +220,5 @@
 - Android 隐私合规静态检查
     - https://mp.weixin.qq.com/s/U06HZb1P5Z2bK_ibtJk9KA
     - https://juejin.cn/post/7046269884207988744
-
-
+- 隐私权限整理笔记：https://blog.csdn.net/zjy764219923/article/details/123559789
 
