--- a/Read/Management/03.团队管理/02.给团队设定目标.md
+++ b/Read/Management/03.团队管理/02.给团队设定目标.md
@@ -7,10 +7,9 @@
 
 
 
-
 ### 01.如何抵达目的地
 - 现在你应该很清楚自己团队该承担什么样的基本职责，以及希望背负什么样的使命了。那么，接下来的一个问题就是，未来的一段时间里，三个月、六个月也好，一年也好，你希望带着你的团队抵达一个什么样的目的地呢？这就是我们通常所说的“目标”。
-- 目标是个大话题，网上关于目标管理的文章数不胜数，公司里安排的目标管理培训一般也得讲一两天，而我这短短几千字的文章，能够带给你什么呢？如下三点：第一，你会更加清楚目标都意味着什么，它可不是让团队有事儿干那么简单。第二，你会掌握目标设定的要点，即使你之前没做过目标管理，你也可以实际操作了。第三，一起探讨在团队频繁调整，公司战略都不稳定的情况下，如何管理团队目标。
+- 目标是个大话题，网上关于目标管理的文章数不胜数。如下三点：第一，你会更加清楚目标都意味着什么，它可不是让团队有事儿干那么简单。第二，你会掌握目标设定的要点，即使你之前没做过目标管理，你也可以实际操作了。第三，一起探讨在团队频繁调整，公司战略都不稳定的情况下，如何管理团队目标。
 
 
 
@@ -21,6 +20,7 @@
 - 第三，目标意味着执行力。很多管理者都把执行力和目标分开来谈，其实在我的访谈和观察中，技术管理者在任务执行上大多是很强的，并不是短板；而表现出“执行力不够”的最大的原因，都在于目标的不清晰或多变。我让他们回想自己做的执行力最棒的项目是不是都具有精确的目标，结果无一例外都是肯定的答案。显然，清晰的目标是高效执行的必要条件。
 - 第四，目标意味着凝聚力。很多管理者问我到底该如何提升团队的凝聚力，我都会告诉他们：明确的团队目标和愿景，就是提升团队凝聚力的重要手段之一。大家因为相同的目标而并肩作战，在一起取得成就的过程中建立起深厚的“革命友情”，这对凝聚力有莫大帮助。
 - 第五，目标也意味着激励。在提升员工自驱力的要素中，员工在工作中产生沉浸其中、物我两忘的“心流”状态，就需要有清晰的目标为前提。而且，团队目标感带给员工对工作的意义感和使命感，也是提升自驱力的重要来源。
+
 
 
 ### 03.SMART设定的原则
