--- a/Read/Management/03.团队管理/04.提升员工的能力.md
+++ b/Read/Management/03.团队管理/04.提升员工的能力.md
@@ -9,7 +9,6 @@
 
 
 
-
 ### 01.提高战斗力前提
 - 提升团队战斗力的基础和前提，是提升员工的个体能力。显然，如果一个团队中员工的个体能力都不提高，整体的战斗力又如何提上去呢？
 - 要探讨如何提升员工的能力，第一个要回答的问题就是：你要提升员工的什么能力？“工作能力”这个概念看似具体，其实在沟通中会产生很多误会和分歧。那么工作能力到底有哪些呢？
@@ -17,7 +16,7 @@
 
 
 ### 02.工作能力的划分
-- 这里我介绍一下关于“能力”的两个最常见的划分方法。
+- 这里介绍一下关于“能力”的两个最常见的划分方法。
 - 第一个分法，就是探讨“管理自信”时提到的“能力三核”，把人的能力分为知识、技能和才干三个层次。如果没有说错的话，大部分管理者希望员工提升的能力，是在“技能”这个层次，也就是员工能操作和完成的技术，比如快速学习能力、进度控制能力等。
 - 第二个分法，是把做好一份工作的能力分为人格力量、专业能力和通用能力。着重提高其中的专业能力。
 
@@ -37,10 +36,10 @@
 - 第三类，关于工作实践。对于管理者来说，常见的做法有：授权和辅导。给员工独立负责重要工作的机会，并给予辅导和反馈。调研工作项目化。即把调研学习的工作进行项目化管理。总结并内化。对于员工完成的重要工作，有必要请他们做一个工作总结，看看从中学到了什么。员工在这个总结和反思过程中的收获，甚至比总结的结果本身更重要。
 
 
+
 ### 05.激发学习的意愿
 - 探讨一个很重要的话题。你有没有发现这样的一个情况，对于提升员工个人能力来说，最关键的往往不是学习的方法，而是学习的意愿。
 - 那么，作为管理者，你应该如何激发员工学习的动力和意愿呢？大体上可总结为如下三板斧：“推”“拉”“放手”。
-
 
 
 #### 5.1 推
