--- a/Read/ReadShareWiki/07.底层思维/13.深度思考的实践.md
+++ b/Read/ReadShareWiki/07.底层思维/13.深度思考的实践.md
@@ -1,13 +1,24 @@
 #### 目录介绍
 - 01.深度思考的背景
+- 02.为何深度思考难
 - 03.正确搞清楚事情
-
+- 05.用实验心态探索
+- 06.不断推演去模拟
 
 
 ### 01.深度思考的背景
 - 现在获取信息的方式越来越多样化，也越来越快捷简短，比如抖音快手，看似看了好多东西，但基本上意义不大，反而还给你一个假象，让你以为学了许多东西。
 - 为什么说看短视频意义不大没有任何营养呢！只有观点，论断，没有任何的前因后果，没有场景和论证过程，每个道理都有其实用的范围，场景，阶段等等，只知道一句话，没什么用处。
 - 越是不费力越轻松得到的信息，越没有价值，花了功夫和辛劳甚至是亲自调查得到的信息才是最有价值的。
+
+
+
+### 02.为何深度思考难
+- 人往往是不愿意去做深度思考的，因为深度思考意味着：
+- 1）要脱离惯性思维，要跳出自己看自己，这非常伤脑细胞；
+- 2）当跳出自己看自己之后，意味着要否定自己，接受一个不完美的自我；
+- 3）意味着要不断进入细节推演，不断往细里纵深，就像侦探一样寻找真相，就像画师一样提前把未来画出来，这非常烧脑。脑力运动和体力运动一样，都让人有生理性的排斥。
+
 
 
 
@@ -19,6 +30,13 @@
 - 4、反复实践，看有没有效果，实践是检验真理的唯一标准，实践后，看结果，结果每一次都很好，说明判断是正确，但判断正确了就不代表万事大吉了，万事万物都是在变化，根据结果的波动也要不断去调整策略。
 
 
+### 05.用实验心态探索
+- 用「实验」的态度，去面对我未曾涉足过的新领域。这样一来，如果做成了，那很好；如果没做成，也没关系，在这个过程中，可以获得许多经验，增进我对外部世界的理解，帮助我更好地调适自己的内在系统。
+- 不要太计较结果，而是去关注过程，关注过程里你的感受、想法、经验，以及你的成长和生命体验的丰富。这是让自己永远保持热情和探索欲的最好方式。
+
+
+### 06.不断推演去模拟
+- 在做重大决策之前，会不断推演各种可能性，直至他真的“看见”这个结果，因为这个思考过程会较为漫长，可一旦他做了决定，往往会非常坚决。
 
 
 
