--- a/Read/ReadShareWiki/01.出发启程/01.书的序言和介绍.md
+++ b/Read/ReadShareWiki/01.出发启程/01.书的序言和介绍.md
@@ -11,14 +11,11 @@
 
 
 
-
 ### 01.看过就以为做到
 - 微信公众号的文章我每篇都收藏了。”但是收藏不等于做到了。就像你学完的内容，这些知识还是别人的，不是你的。当学完后，这份学习的责任就递交给你了。
-- 什么时候才会真正的内化？首先需要实践，并从中得到反馈，经过这样的一个过程，才能把知识真正地内化。很多时候，我们都缺少了实践反馈机制。
-- 如何帮助你学得更好，在进行这次课程准备的时候，曾问自己：现在大家不缺知识，不缺信息吧？答案是肯定的，而且每个人手上可能订阅的微信公众号有十几个，每天光看微信公众号都看不及。
-- 为什么大家会花时间来学习这样一个系列课呢？后来我找到了答案——我需要给大家更多的附加值。这个附加值不应该只是知识，而是怎么更有效地学习。这是我的要求，这个自我的要求会体现在整个系列课当中。
-
-
+- 什么时候才会真正的内化？首先需要实践，并从中得到反馈，经过这样的一个过程，才能把知识真正地内化。很多时候，缺少了实践反馈机制。
+- 如何帮助你学得更好，在进行这次课程准备的时候，曾问自己：现在大家不缺知识，不缺信息吧？答案是肯定的，每天新闻，书籍，博客等都是那么多。
+- 为什么大家会花时间来学习这样一个系列课呢？后来找到了答案——我需要给大家更多的附加值。这个附加值不应该只是知识，而是怎么更有效地学习和输出。
 
 
 ### 02.真正实现的目标
@@ -28,29 +25,23 @@
 - 所以，这是我第一点想要分享给大家的：大家要搞清楚真正要实现的目标是什么，这是特别能让我们坚持下去的理由。
 
 
-
 ### 03.方法论而非招数
 - 为什么要这么做，这背后支撑的理论体系是什么。如果你把这两个问题想透，我们每个人都可以掌握各种可变化的招式，来帮助自己更好地成长。
-- 甚至这也能成为改变我们本身思维模式的契机。很多时候我们焦虑、紧张，觉得好像学习没有效果，更多的是因为我们没有掌握方法论，只是在学简单的招式。
-
-
+- 甚至这也能成为改变我们本身思维模式的契机。很多时候我们焦虑、紧张，觉得好像学习没有效果，更多的是因为没有掌握方法论，只是在学简单的招式。
 
 
 ### 04.学习要趁热打铁
-- 学完这一章，我们可以改变的事情是什么，从明天开始，马上、立刻行动起来，打铁要趁热。很多人学完一章后，说：“等我以后有空了再复习，我先收藏。”
-- 这样就没用了，因为我们的记忆曲线马上就会下降。如果你立刻行动起来，立刻去实践，马上就会得到反馈；一有反馈，我们就会思考；有了思考，再回去重温，这时候知识就内化了。
-
+- 学完这一章，可以改变的事情是什么，从明天开始，马上、立刻行动起来，打铁要趁热。很多人学完一章后，说：“等我以后有空了再复习，先收藏。”
+- 这样就没用了，因为记忆曲线马上就会下降。如果你立刻行动起来，立刻去实践，马上就会得到反馈；一有反馈，我们就会思考；有了思考，再回去重温，这时候知识就内化了。
 
 
 ### 05.布置作业要实践
 - 布置作业。一旦有了作业，就会督促我们更好地去思考、去反思。现在的慢，才是将来的快。想一想读书的时候，为什么学习的知识点很熟悉，那是因为课前预习，课后演练，这样可以让学习的东西印象更加深刻。
 
 
-
 ### 06.走出自己舒适圈
 - 学习的本质就是难的，因为只有发现难，你才会觉得离开了自己的舒适圈。如果不难，说来说去都是你懂的东西，那就是无效学习。
-- 每一次觉得难时，你才知道，我的时间没白花。但不要怕，因为实践：通过方法论、立刻行动的要点、作业打卡、学习路径等，来帮助大家不断地去实践。不要怕学习难，就怕你没有开始的勇气。
-
+- 每一次觉得难时，你才知道，时间没白花。但不要怕，因为实践：通过方法论、立刻行动的要点、作业打卡、学习路径等，来帮助大家不断地去实践。不要怕学习难，就怕你没有开始的勇气。
 
 
 ### 07.不妄想立即改变
