--- a/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
@@ -21,20 +21,13 @@
     - 5.4 敏感信息控频
     - 5.5 隐私协议声明
     - 5.6 敏感权限实践
-- 06.方案基础设计
-    - 6.1 整体架构图
-    - 6.2 UML设计图
-    - 6.3 关键流程图
-    - 6.4 接口设计图
-    - 6.5 模块间依赖关系
-- 07.其他设计说明
-    - 7.1 性能设计
-    - 7.2 稳定性设计
-    - 7.3 灰度设计
-    - 7.4 降级设计
-    - 7.5 异常设计
-- 08.其他说明介绍
-    - 8.1 参考博客链接
+- 06.合规测试检查重点
+    - 6.1 合规处理优先级
+    - 6.2 QA测试检查重点
+    - 6.3 交互层面合规
+    - 6.4 服务端敏感收集
+- 07.其他说明介绍
+    - 7.1 参考博客链接
 
 
 
@@ -100,7 +93,7 @@
 
 
 #### 4.2 超范围收集个人信息
-- 场景：
+- 场景说明：
     - 1.APP未见向用户告知且未经用户同意，在某功能中，存在收集通讯录、短信、通话记录、相机等信息的行为，非服务所必需且无合理应用场景，超出与收集个人信息时所声称的目的具有直接或合理关联的范围。
     - 2.未经用户同意，SDK存在按照一定频次读取位置信息等个人信息行为，非服务所必需且无合理应用场景，超出实现产品或服务的业务功能所必需的最低频率。
 - 整改建议：
@@ -120,6 +113,8 @@
 - 整改建议：
     - 针对1，APP和集成的SDK在用户“同意”隐私政策，然后在调用初始化sdk操作。
     - 针对2，在隐私政策中补充第三方SDK收集（比如声网sdk收集IMSI）信息的规则说明。
+- 敏感个人信息范围参考[《信息安全技术个人信息安全规范》](https://www.tc260.org.cn/upload/2018-01-24/1516799764389090333.pdf)
+
 
 
 #### 4.4 过度索取权限
@@ -167,17 +162,17 @@
 
 
 #### 5.2 工具检测隐私API
-- 方案的选择和比较
-    - 方案1：Xposed
-        - 如果你对Xposed比较熟悉，并且手头有个root的设备安装了Xposed框架，那么直接开发一个Xposed模块来hook指定方法就可以了。缺点是需要root权限……
-    - 方案2：VirtualXposed
-        - VirtualXposed 是基于VirtualApp 和 epic 在非ROOT环境下运行Xposed模块的实现（支持5.0~10.0)。
-        - VirtualXposed其实就是一个支持Xposed的虚拟机，我们把开发好的Xposed模块和对应需要hook的App安装上去就能实现hook功能。
-    - 方案3：epic
-        - 如果不想折腾 Xposed 或者 VirtualXposed，只要在应用内接入epic，就可以实现应用内Xposed hook功能，满足运行hook需求。
-        - epic 存在兼容性问题，例如Android 11 只支持64位App，所以建议只在debug环境使用。
-    - 最终选择：方案3
-        - 它可以拦截本进程内部几乎任意的 Java 方法调用，可用于实现 AOP 编程、运行时插桩、性能分析、安全审计等。
+- 方案的选择和比较如下：
+- 方案1：Xposed
+    - 如果你对Xposed比较熟悉，并且手头有个root的设备安装了Xposed框架，那么直接开发一个Xposed模块来hook指定方法就可以了。缺点是需要root权限……
+- 方案2：VirtualXposed
+    - VirtualXposed 是基于VirtualApp 和 epic 在非ROOT环境下运行Xposed模块的实现（支持5.0~10.0)。
+    - VirtualXposed其实就是一个支持Xposed的虚拟机，我们把开发好的Xposed模块和对应需要hook的App安装上去就能实现hook功能。
+- 方案3：epic
+    - 如果不想折腾 Xposed 或者 VirtualXposed，只要在应用内接入epic，就可以实现应用内Xposed hook功能，满足运行hook需求。
+    - epic 存在兼容性问题，例如Android 11 只支持64位App，所以建议只在debug环境使用。
+- 最终选择：方案3
+    - 它可以拦截本进程内部几乎任意的 Java 方法调用，可用于实现 AOP 编程、运行时插桩、性能分析、安全审计等。
 - 使用起来也非常简单：提前设置需要 hook 哪个 java 方，比如，我要 hook TelephonyManager 的 getDeviceId 方法：
     ``` java
     //核心方法
@@ -199,19 +194,18 @@
     });
     ```
     - 在代码中如果有地方调用 TelephonyManager.getDeviceId 的，都会被 epic 的 beforeHookedMethod 给拦截到，只需要在 beforeHookedMethod 打印出堆栈即可看到是谁调用的。
-- 打印堆栈信息
-    - 为何打印堆栈信息
-        - 在应用运行时记录每次触发隐私行为的时间点和调用链信息，根据触发时间来判断该隐私行为是否过量执行，根据调用链信息来辅助判断具体是哪一块业务需要来获取隐私数据。
-    - 当检测到了风险函数调用情况，则需要知道该函数是在哪里调用的？这个该怎么做呢？
-        - 获取当前线程，然后通过线程获取stackTraces，再然后遍历打印即可。根据堆栈信息，可以看到调用链的类名，方法名称，代码行数等。
-
-
-
-#### 5.2 工具检测隐私API
+- 为何打印堆栈信息
+    - 在应用运行时记录每次触发隐私行为的时间点和调用链信息，根据触发时间来判断该隐私行为是否过量执行，根据调用链信息来辅助判断具体是哪一块业务需要来获取隐私数据。
+- 当检测到了风险函数调用情况，则需要知道该函数是在哪里调用的？这个该怎么做呢？
+    - 获取当前线程，然后通过线程获取stackTraces，再然后遍历打印即可。根据堆栈信息，可以看到调用链的类名，方法名称，代码行数等。
 
 
 
 #### 5.3 工具检测权限
+- 使用场景
+    - 新增三方sdk或开源库，有收集个人信息或者权限的，这个时候需要用工具检测。主要是为了新增的权限在隐私政策中申请，用工具去保证重要权限防止漏掉隐私说明。
+- 敏感权限检查
+    - 扫描AndroidManifest.xml检查敏感权限，这个可以借助三方工具。
 
 
 
@@ -232,7 +226,7 @@
         if (null != Cache.ANDROID_ID) {
             return Cache.ANDROID_ID;
         }
-        String androidId = TMAtomicOnceGetters.getAndroidId();
+        String androidId = SafePrivateHelper.getAndroidId();
         if (!TextUtils.isEmpty(androidId)) {
             Cache.ANDROID_ID = androidId;
         } else {
@@ -254,7 +248,7 @@
 
 
 #### 5.6 敏感权限实践
-- 敏感权限
+- 敏感权限。如下所示，频繁读取敏感权限也会
     ``` java
     android.permission.READ_CALL_LOG：读取通话记录
     android.permission.WRITE_CALL_LOG：写通话记录
@@ -266,6 +260,52 @@
     android.permission.RECEIVE_SMS：接受收短信
     android.permission.READ_SMS：读取短信
     ```
+
+
+
+### 06.合规测试检查重点
+#### 6.1 合规处理优先级
+- 合规需求第一优先级，第一时间跟版上线，不要有任何商量和侥幸，比开发需求还要重要！否则应用市场无法上架很麻烦……
+- 新增需求不合规不允许上线：新增需求如有不合规的地方，但又来不及修改，则延期上线，整改到合规再上
+- 发版准出增加 合规确认环节：每次发版，产品、研发、测试 都需要负责检查对应的合规项，对检查结果负责，都确认之后才可以发版
+
+
+
+#### 6.2 QA测试检查重点
+- 重点手工 check list。研发和测试都要重视这块工作！
+- 第一次打开时，各种隐私协议打开是否正常。
+- 第一次打开时，未同意隐私协议前，不能有任何网络请求发出，可通过手机设置代理查看。
+- 第一次打开时，未同意隐私协议前，不能有任何隐私 API 调用，通过Xposed的手机是否有隐私api调用。
+
+
+
+#### 6.3 交互层面合规
+- 申请权限弹窗申明
+    - App上一些用户权限需要有申请弹窗说明，相关交互内容有特定的交互要求，需qa配合在发版前回归阶段进行有限的检查。
+- 筛查范围
+    - 安卓端，app启动时，明显的权限申请弹窗、隐私协议、个性化推荐等交互流程。
+    - 权限弹窗控制频次(比如App申请通知权限弹窗设置用于点击取消后，频次至少间隔48小时)；同意隐私协议不能默认勾选；个性化推荐支持关闭
+- 权限弹窗控制频次
+    - 操作步骤：最新下载未打开的安卓包，启动app时，出现权限弹框任意一个例如：本地存储、相机、定位权限，点击拒绝；将app关闭杀死后台程序，再次打开app，查看是否还有上述被拒绝的权限弹框，例如：本地存储、相机、定位权限。
+    - 预期效果：如果拒绝之后再弹框就是有问题、不合理，需要上报开发排查原因；如果没有上述三个权限弹窗，则为正常。
+- 同意隐私协议不能默认勾选
+    - 打开app时，关注涉及隐私协议页面，查看默认勾选状态。预期效果：默认为：未勾选，则为正常；默认为：勾选，则为有问题，需要上报开发排查原因。
+- 收集与功能无关的个人信息
+    - 在未使用任何功能的情况，查看是否有弹窗索取手机存储权限。预期效果：不进行弹窗索取手机存储权限。
+
+
+
+#### 6.4 服务端敏感收集
+- 背景简单说明一下
+    - 禁止APP收集用户信息，比如imei、cuid，oaid等用户设备信息。所以在发版前需要确保客户端内请求不携带imei、oaid等敏感字段，接口返回也不包含以上敏感字段。
+- 筛查范围记录
+    - APP内客户端/fe发起的接口请求，建议各APP先彻底筛查一遍，排除隐患，后续迭代版本例行筛查F0功能或新增功能即可。
+- 筛查规则：请求 request body/response中不包括
+    - imei，imei的值（一般有两种形式，eg：imei正常格式没有加密的 imei=866917034628451，加密过的imei = oC0JwJIxaEiKIWlzkqHO）。
+- 筛查方法说明
+    - 连接代理（全局代理，不是指定某个域名的代理），以charles为例。回到charles界面，ctrl+F，输入关键字“imei”“oaid”以及imei的值进行反查。
+    - 关注request里面是否携带此三个参数，只要有携带，不管是否传值，都是问题，需要报给客户端；关注response中是否返回此三个参数，如果有，需要上报开发排查原因，是否可以不返回此参数。
+
 
 
 
