--- a/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
@@ -26,6 +26,7 @@
     - 6.2 QA测试检查重点
     - 6.3 交互层面合规
     - 6.4 服务端敏感收集
+    - 6.5 隐私协议筛查
 - 07.其他说明介绍
     - 7.1 参考博客链接
 
@@ -267,7 +268,7 @@
 #### 6.1 合规处理优先级
 - 合规需求第一优先级，第一时间跟版上线，不要有任何商量和侥幸，比开发需求还要重要！否则应用市场无法上架很麻烦……
 - 新增需求不合规不允许上线：新增需求如有不合规的地方，但又来不及修改，则延期上线，整改到合规再上
-- 发版准出增加 合规确认环节：每次发版，产品、研发、测试 都需要负责检查对应的合规项，对检查结果负责，都确认之后才可以发版
+- 发版准出增加，合规确认环节：每次发版，产品、研发、测试 都需要负责检查对应的合规项，对检查结果负责，都确认之后才可以发版
 
 
 
@@ -305,6 +306,14 @@
 - 筛查方法说明
     - 连接代理（全局代理，不是指定某个域名的代理），以charles为例。回到charles界面，ctrl+F，输入关键字“imei”“oaid”以及imei的值进行反查。
     - 关注request里面是否携带此三个参数，只要有携带，不管是否传值，都是问题，需要报给客户端；关注response中是否返回此三个参数，如果有，需要上报开发排查原因，是否可以不返回此参数。
+
+
+
+#### 6.5 隐私协议筛查
+- 方案说明：
+    - 确保隐私协议可访问； 通过脚本自动检查三方 SDK 是否在隐私协议中声明；法务 + 产品 定期检查；
+- 实施措施：
+    - 建立隐私协议可访问性自动化巡检机制；三方SDK检测，根据检测出来新增的三方SDK扫描隐私协议，确认该sdk是否在隐私协议中声明。
 
 
 
