--- a/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
@@ -314,7 +314,8 @@
     - 确保隐私协议可访问； 通过脚本自动检查三方 SDK 是否在隐私协议中声明；法务 + 产品 定期检查；
 - 实施措施：
     - 建立隐私协议可访问性自动化巡检机制；三方SDK检测，根据检测出来新增的三方SDK扫描隐私协议，确认该sdk是否在隐私协议中声明。
-
+- 开发需要注意点
+    - 新增三方sdk或开源库，有收集个人信息或者权限的 必须在隐私政策里申明（找产品和法务）；没收集个人信息或者权限的三方库或者自有库，确定好后将sdk包名和中文名称备注一下。
 
 
 
